# magicportal

./: .gitignore  Cargo.toml  Justfile  LICENSE  Makefile  README.md  config.go  config.json  config.sample.json  config.sample.toml  go.mod  go.sum  main.go  rlsr.yml
.github/workflows/: release.yaml
src/: agent.rs  cfg.rs  forwarder.rs  init.rs  main.rs
